[workspace]
resolver = "2"

members = [
	"authorize-service",
	"execute-service",
	"transfer-client",
	"block-parser",
]

[workspace.dependencies]
snarkvm = { git = "https://github.com/ProvableHQ/snarkVM.git", rev = "140ff26" }

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug = true
debug-assertions = true
