[package]
name = "execute-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "execute-service"
path = "src/main.rs"
bench = false

[dependencies.anyhow]
version = "1.0.75"

[dependencies.async-trait]
version = "0.1.74"

[dependencies.log]
version = "0.4.20"

[dependencies.pretty_env_logger]
version = "0.5.0"

[dependencies.rand_chacha]
version = "0.3.1"

[dependencies.rayon]
version = "1.8.0"

[dependencies.serde]
version = "1.0.190"

[dependencies.snarkvm]
git = "https://github.com/AleoHQ/snarkVM.git"
version = "0.16.16"

[dependencies.structopt]
version = "0.3.26"

[dependencies.thread_local]
version = "1.1.7"

[dependencies.tokio]
version = "1.33.0"
features = [ "full" ]

[dependencies.tokio-rayon]
version = "2.1.0"

[dependencies.tracing]
version = "0.1.40"

[dependencies.warp]
version = "0.3.6"

[dev-dependencies.criterion]
version = "0.5.1"

[profile.release]
opt-level = 3
lto = "thin"
incremental = true

[profile.bench]
opt-level = 3
debug = false
rpath = false
lto = "thin"
incremental = true
debug-assertions = false

[profile.dev]
opt-level = 3
lto = "thin"
incremental = true

[profile.test]
opt-level = 3
lto = "thin"
incremental = true
debug = true
debug-assertions = true
