[package]
name = "transfer-client"
version = "0.1.0"
edition = "2021"

[dependencies.authorize-service]
path = "../authorize-service"

[dependencies.execute-service]
path = "../execute-service"

[dependencies.anyhow]
version = "1.0.75"

[dependencies.rand_chacha]
version = "0.3.1"

[dependencies.snarkvm]
git = "https://github.com/AleoHQ/snarkVM.git"
version = "0.16.16"

[dependencies.tokio]
version = "1.33.0"
features = [ "full" ]

[dependencies.reqwest]
version = "0.11.22"

[dependencies.warp]
version = "0.3.6"
