[package]
name = "authorize-service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "authorize-service"
path = "src/main.rs"
bench = false

[[bench]]
name = "benchmarks"
path = "benches/benchmarks.rs"
harness = false

[dependencies.anyhow]
version = "1.0.75"

[dependencies.log]
version = "0.4.20"

[dependencies.pretty_env_logger]
version = "0.5.0"

[dependencies.rand_chacha]
version = "0.3.1"

[dependencies.serde]
version = "1.0.190"

[dependencies.serde_json]
version = "1.0.117"

[dependencies.snarkvm]
workspace = true

[dependencies.structopt]
version = "0.3.26"

[dependencies.thread_local]
version = "1.1.7"

[dependencies.tokio]
version = "1.33.0"
features = [ "full" ]

[dependencies.tokio-rayon]
version = "2.1.0"

[dependencies.tracing]
version = "0.1.40"

[dependencies.warp]
version = "0.3.6"

[dev-dependencies.criterion]
version = "0.5.1"